kubernetes/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: production-service

spec:
  selector:
    app: production-app

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
